# rust-hack-template

./: Cargo.toml
src/: config.rs  main.rs  state.rs
src/rest/: hello.rs  mod.rs
src/ws/: hello.rs  mod.rs
