[package]
name = "rust-hack-template"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.10.3", features = ["cookie"] }
bon = "3.8.1"
bytes = "1.10.1"
chrono = "0.4.42"
directories = "6.0.0"
dotenvy = "0.15.7"
envy = "0.4.2"
futures = "0.3.31"
futures-util = "0.3.31"
itertools = "0.14.0"
num_cpus = "1.17.0"
parking_lot = "0.12.5"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
socketioxide = { version = "0.17.2", features = ["tracing"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.6", features = ["trace", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "std"] }
uuid = { version = "1.18.1", features = ["v4", "v7", "serde"] }

[dev-dependencies]
yare = "3.0.0"
